[refactor] use List.of, I love Java 9